# AI-Oral-Segmentation

./: README.md  environment.yml  pyproject.toml
code/: YOLO_Stage1_preprocessing.py  YOLO_Stage2_segmentation.py  YOLO_Stage3_testing.py
data/: README.md
