[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-oral-segmentation"
version = "0.1.0"
description = "YOLOv8-based dental CBCT tooth segmentation pipeline (RSI 2025)"
authors = [
    { name = "Hailey Chulamorkodt", email = "your@email.com" }
]
requires-python = ">=3.10"

dependencies = [
    "ultralytics>=8.0.0",
    "numpy>=1.23",
    "opencv-python>=4.6",
    "matplotlib>=3.7",
    "pyyaml>=6.0",
    "Pillow>=9.0",
    "scikit-image>=0.22",
    "tqdm>=4.65",
]

[tool.setuptools]
package-dir = {"" = "code"}

[tool.setuptools.packages.find]
where = ["code"]
